# etl-api-loader

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  apiloader  docker-compose.yml  main.py  pyproject.toml
src/: enum.py  settings.py  utils.py
src/cli/: main.py
src/exception/: base.py
src/notify/: base.py  factory.py  webhook.py
src/pipeline/: db_utils.py  runner.py  watermark.py
src/pipeline/audit/: base.py  factory.py  postgresql.py
src/pipeline/parse/: base.py  factory.py  json.py
src/pipeline/publish/: base.py  factory.py  postgresql.py
src/pipeline/read/: base.py  factory.py  graphql.py  json_utils.py  rest.py
src/pipeline/read/authentication/: auth.py  base.py  bearer.py  factory.py
src/pipeline/read/pagination/: base.py  cursor.py  factory.py  next_url.py  offset.py  query.py
src/pipeline/transform/: model_utils.py  transformer.py
src/pipeline/validate/: validator.py
src/pipeline/write/: base.py  factory.py  postgresql.py
src/process/: client.py  create_table.py  db.py  processor.py  tables.py
src/processor/: client.py  processor.py
src/sources/: base.py  master.py  registry.py
src/sources/dummyjson/: base.py  config.py
src/sources/dummyjson/models/: products.py
src/sources/jsonplaceholder/: base.py  config.py
src/sources/jsonplaceholder/models/: posts.py
src/sources/openweather/: config.py
src/sources/polygon/: base.py  config.py
src/sources/rickandmorty/: config.py
src/sources/stripe/: config.py
src/tests/: conftest.py  test_graphql_reader.py  test_json_parser.py  test_rest_reader.py
(+18 files in other folders)
