[project]
name = "etl-api-loader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.25.1",
    "azure-keyvault-secrets>=4.10.0",
    "boto3>=1.42.4",
    "google-cloud-secret-manager>=2.25.0",
    "httpx[http2]>=0.28.1",
    "opentelemetry-api>=1.39.0",
    "opentelemetry-exporter-otlp-proto-http>=1.39.0",
    "opentelemetry-sdk>=1.39.0",
    "pendulum>=3.1.0",
    "psutil>=7.1.3",
    "psycopg[binary]>=3.3.2",
    "pydantic>=2.12.5",
    "pydantic-extra-types[pendulum]>=2.10.6",
    "pydantic-settings>=2.12.0",
    "pymysql>=1.1.2",
    "pyodbc>=5.3.0",
    "rich>=14.2.0",
    "sqlalchemy-bigquery>=1.16.0",
    "sqlmodel>=0.0.27",
    "structlog>=25.5.0",
    "typer>=0.20.0",
    "xxhash>=3.6.0",
]

[project.scripts]
apiloader = "src.cli.main:main"

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.36.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.8",
    "scalene>=1.5.55",
]
